[gd_scene format=3 uid="uid://8077lag2buv1"]

[ext_resource type="Texture2D" uid="uid://r7wycdrpjpps" path="res://assets/visual/ui/main_menu/menu_background.jpg" id="1_del6v"]
[ext_resource type="Theme" uid="uid://b713thhl0tehm" path="res://themes/main_menu.tres" id="1_swl1s"]
[ext_resource type="Theme" uid="uid://b08vayo7o0o3i" path="res://themes/panel_options.tres" id="3_d8vgy"]
[ext_resource type="Texture2D" uid="uid://bg5xnadqpeblp" path="res://assets/visual/ui/panel.png" id="4_v4co7"]
[ext_resource type="Script" uid="uid://owfkrqfoi81g" path="res://scenes/menus/settings.gd" id="5_d8rlf"]

[node name="Settings" type="Control" unique_id=1664080643]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_swl1s")

[node name="BG" type="TextureRect" parent="." unique_id=538344818]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_del6v")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1005654577]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1234500965]
layout_mode = 2

[node name="SettingsPanel" type="TextureRect" parent="CenterContainer/VBoxContainer" unique_id=1989050266]
layout_mode = 2
theme = ExtResource("3_d8vgy")
texture = ExtResource("4_v4co7")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/SettingsPanel" unique_id=38695196]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer" unique_id=903830278]
layout_mode = 2
script = ExtResource("5_d8rlf")

[node name="Volume" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" unique_id=422117155]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" unique_id=371951308]
layout_mode = 2
max_value = 1.0
step = 0.1
ticks_position = 3

[node name="MusicVolume" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" unique_id=113642049]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" unique_id=925043909]
layout_mode = 2
max_value = 1.0
step = 0.1
ticks_position = 3

[node name="SoundVolume" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" unique_id=1342855424]
layout_mode = 2
text = "Sound Volume"

[node name="SoundVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" unique_id=1142215318]
layout_mode = 2
max_value = 1.0
step = 0.1
ticks_position = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer" unique_id=1879613827]
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_right = 128

[node name="ReturnButton" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer" unique_id=1858144404]
layout_mode = 2
text = "Return"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/VolumeSlider" to="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/MusicVolumeSlider" to="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer/SoundVolumeSlider" to="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" method="_on_sound_volume_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/ReturnButton" to="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBoxContainer" method="_on_return_button_pressed"]
